fix: long event names making roles column overflow
resolves https://cmuabtech.slack.com/archives/CKLMNB5PX/p1772572001761109

plain text event names (for unauthorized users) were wrapped in <p> for cleaner css selection

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -80,6 +80,11 @@ table.eventslist td:first-child {
 	padding: 0;
 }
 
+.event-name > a,
+.event-name > p {
+  text-wrap: wrap;
+}
+
 @media screen and (max-width: 985px) {
   #eventsbody, #sidebar {
     display: block;
